--- a/request.ipynb
+++ b/request.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "b'{\"message\":\"User created successfully.\"}\\n'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,28 +31,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'{\"message\":\"User deleted successfully.\"}\\n'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import requests\n",
-    "url = 'http://127.0.0.1:5000/delete/Funcionario/5'\n",
+    "url = 'http://127.0.0.1:5000/delete/Funcionario/4'\n",
     "response = requests.delete(url)\n",
     "response.content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b'{\"message\":\"Error: embarque does not exist.\"}\\n'"
+       "b'{\"message\":\"User updated successfully.\"}\\n'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +72,7 @@
     "import requests\n",
     "url = 'http://127.0.0.1:5000/update/Funcionario/'\n",
     "data = {\n",
-    "    'id': '4',\n",
+    "    'id': '3',\n",
     "    'name': 'Lucas',\n",
     "    'last_name': 'Silva',\n",
     "    'birth_date': '1989-07-03',\n",
@@ -73,16 +84,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b'{\"message\":\"Us\\\\u00faario 4 n\\\\u00e3o est\\\\u00e1 apto para embarque.\"}\\n'"
+       "b'{\"message\":\"Usuario 1 nao esta apto para embarque.\"}\\n'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +104,7 @@
     "data = {\n",
     "    'dataEmbarque': '2023-05-03',\n",
     "    'dataDesembarque': '2023-05-15',\n",
-    "    'idFuncionario': '4',\n",
+    "    'idFuncionario': '1',\n",
     "    'comentario': 'comentario'\n",
     "    }\n",
     "response = requests.post(url, json=data)\n",
@@ -125,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +145,7 @@
        "b'{\"message\":\"Error: embarque does not exist.\"}\\n'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +157,7 @@
     "    'id': '4',\n",
     "    'dataEmbarque': '2023-05-04',\n",
     "    'dataDesembarque': '2023-05-16',\n",
-    "    'idFuncionario': '4',\n",
+    "    'idFuncionario': '6',\n",
     "    'comentario': 'comentario'\n",
     "    }\n",
     "response = requests.post(url, json=data)\n",
@@ -171,6 +182,33 @@
    ],
    "source": [
     "response.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 ('faw fawd', '2000-01-01', '2000-01-03')\n",
+      "1 ('Lucas Souza', '2023-04-26', '2023-05-02')\n",
+      "2 ('faw fawd', '2000-01-01', '2000-01-04')\n",
+      "3 ('faw fawd', '2000-01-01', '2000-01-01')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "url = 'http://127.0.0.1:5000/select/dadosCEO/'\n",
+    "response = requests.get(url)\n",
+    "listaEmbarques = response.json()\n",
+    "\n",
+    "lista = [tuple(i.values()) for i in listaEmbarques]\n",
+    "for linha, dados in enumerate(lista):\n",
+    "    print(linha, tuple(reversed(dados)))"
    ]
   }
  ],
